# rust_epub_reader

./: .gitignore  .gitmodules  .recents  .recents.save  Cargo.toml  out.txt
druid/examples/: custom_widget.rs  textbox.rs
examples/: 1.epub  1_MOD.epub  1_modified.epub  3.epub  4.epub  5.epub  Pride and Prejudice - Jane Austen.epub  darwin_diario_di_un_naturalista_giramondo.epub  old.epub  pg2264-images-3.epub  tolstoj_anna_karenina.epub
examples/assets/: pavese_full_book.json
src/: V: Tag(HTMLTag { _name: Bytes("html"), ,.jl  application_state.rs  appstate.rs  dom.rs  epub_page.rs  lib.rs  main.rs  ocr.rs  old_main.rs  sidebar.rs  tool.rs
src/assets/fontello-49435ed5/: config.json  demo.html
src/assets/fontello-49435ed5/css/: druid-epub-icons-codes.css  druid-epub-icons-embedded.css  druid-epub-icons-ie7-codes.css  druid-epub-icons.css  (+1 more)
src/core/: commands.rs  constants.rs  mod.rs  style.rs
src/data/: appstate.rs  home.rs  mod.rs
src/data/common/: indexed_text.rs  mod.rs  page_position.rs
src/data/epub/: edit_data.rs  epub_data.rs  epub_page.rs  mod.rs  ocr_data.rs  settings.rs  sidebar.rs
src/data/home/: home_data.rs  mod.rs  recent.rs
src/druid_icons/: icon_action  icon_alert  icon_av  icon_communication  icon_content  icon_device  icon_editor  icon_file  icon_hardware  icon_home  icon_image  icon_maps  icon_navigation  icon_notification  icon_places  icon_search  icon_social  icon_toggle
src/druid_icons/backup/: icon_action  icon_alert  icon_av  icon_communication  icon_content  icon_device  icon_editor  icon_file  icon_hardware  icon_home  icon_image  icon_maps  icon_navigation  icon_notification  icon_places  icon_search  icon_social  icon_toggle
src/widgets/: edit.rs  icon.rs  mod.rs  ocr.rs
src/widgets/common/: clickable_label.rs  group_button.rs  icon.rs  icon_button.rs  mod.rs  round_button.rs  tooltip.rs
src/widgets/epub_page/: epub_controller.rs  icon_button.rs  mod.rs  navbar.rs  sidebar.rs  textcontainer.rs  toolbar.rs
src/widgets/home_page/: mod.rs  recent_item.rs  topbar.rs
src/widgets/navigator/: controller.rs  mod.rs  uiview.rs
src/widgets/popup/: edit.rs  mod.rs  ocr.rs
(+1 files in other folders)
