[package]
name = "rust_druid_epub_reader"
version = "0.1.0"
edition = "2021"



[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features=["im", "svg", "image", "png", "jpeg"] }
open = "1.6"
xmlparser = "0.13.3"
tracing = "0.1.36"
epub = "1.2.3"

strum = "0.24.1"


serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

leptess = "0.13.4" 
utf8_slice = "1.0.0"
lipsum = "0.8.2"
rand = "0.8.5"
tantivy = "0.18.1"


druid-material-icons = "0.1.0"

zip = "0.6.3"
