[package]
name = "rust_druid_epub_reader"
version = "0.1.0"
edition = "2021"



[dependencies]
druid = { git = "https://github.com/linebender/druid.git", rev="aed8892873d7a3151c20535fa8183293c739c867", features=["im", "svg", "image", "png", "jpeg"] }
open = "1.6"
xmlparser = "0.13.3"
tracing = "0.1.36"
#epub = {path = "../epub-rs" }
epub = "1.2.2"
strum = "0.24.1"


serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

leptess = "0.13.4" 
utf8_slice = "1.0.0"
lipsum = "0.8.2"
rand = "0.8.5"
tantivy = "0.18.1"


druid-material-icons = "0.1.0"

zip = "0.6.3"


downcast-rs = "1.2.0"

lazy_static = "1.4.0"